<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondoazul"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/img_zoo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/imagen_zoo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.098"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/animales" />

    <TextView
        android:id="@+id/txt_titulo_venta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="16dp"
        android:text="@string/ventas_de_entradas_del_zoo"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_zoo" />

    <TextView
        android:id="@+id/txt_titulo_entradasd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/entradas_disponibles"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/img_zoo"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_cantidad_entradasd"
        android:layout_width="65dp"
        android:layout_height="61dp"
        android:layout_marginTop="21dp"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/cantidad_disponible"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@+id/txt_titulo_entradasd"
        app:layout_constraintStart_toStartOf="@+id/txt_titulo_entradasd"
        app:layout_constraintTop_toBottomOf="@+id/txt_titulo_entradasd" />

    <EditText
        android:id="@+id/edt_cantidade"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:autofillHints=""
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/cantidad_de_entradas"
        android:inputType="numberSigned|number"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_titulo_venta" />

    <EditText
        android:id="@+id/edt_dia_semana"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:autofillHints=""
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/d_a_de_la_semana_de_la_visita"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_cantidade" />

    <Button
        android:id="@+id/bt_siguiente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/siguiente"
        android:onClick="siguiente"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_dia_semana" />

</androidx.constraintlayout.widget.ConstraintLayout>